# Summarion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tasks.md
.cursor/rules/: README.md  api.md  architecture.md  basic.md  do-not.md  layout.md  modes.md  patterns.md  testing.md
.github/workflows/: ci.yml
summarion/core/: __init__.py  contracts.py  models.py
